--- a/index.html
+++ b/index.html
@@ -27,26 +27,27 @@
             <img class="bakery-image" src="./images/bakery.jpg" alt="Image a bakery">
     </div>
     </div>
-    <div class="all-desserts">
+    <div class="desserts-wrapper">
         <h2>Our Bestsellers</h2>
-        <div class="tiramisu">
-            <img src="./images/tiramisu.jpg" alt="Image of Tiramisu!">
+        <div class="desserts-container">
+        <div class="desserts">
+            <img class="dessert-image" src="./images/tiramisu.jpg" alt="Image of Tiramisu!">
         </div>
             <p class="dessert-text">Tiramisu is an elegant and rich layered Italian dessert made with delicate ladyfinger cookies, espresso or instant espresso, mascarpone cheese, eggs, sugar, Marsala wine, rum and cocoa powder.</p>
-                <div class="cheesecake">
-                    <img src="./images/cheesecake.jpg" alt="Image of Cheesecake!">
-                </div>
+        <div class="desserts">
+            <img class="dessert-image" src="./images/cheesecake.jpg" alt="Image of Cheesecake!">
+        </div>
             <p class="dessert-text">New York cheesecake is known for its creamy, satiny texture. It's rich, dense and tall with a flat top – exactly how I like my cheesecake. It's made with cream cheese, eggs, egg yolks and heavy cream or sour cream, to add richness and a smooth consistency</p>
-                <div class="donuts">
-                    <img src="./images/donuts.jpg" alt="Image of Donuts!">
-                </div>
+        <div class="desserts">
+            <img class="dessert-image" src="./images/donuts.jpg" alt="Image of Donuts!">
+        </div>
             <p class="dessert-text">Our delicious chocolate and vanilla cake donuts are baked in the oven, covered with chocolate and maple frosting, and decorated with melted Ghirardelli™ chocolates.</p>
-                <div class="macarons">
-                    <img src="./images/macarons.jpg" alt="Image of Macarons!">
-                </div>
-        
+        <div class="desserts">
+            <img class="dessert-image" src="./images/macarons.jpg" alt="Image of Macarons!">
+        </div>
             <p class="dessert-text">Our Macarons have a smooth, crisp shell and a moist, chewy interior. They are made with egg whites and lots of ground nuts, which helps them to attain that chewy texture without drying out and becoming too crispy, like a simple meringue cookie made with just egg whites and sugar.</p>
-    </div>         
+        </div>
+   </div>         
 
             <!--- 
         <p>Warm Buns Bakery is by far the best bakery in town. Seymour Martin is a genius and I dont think I've tasted a better cheesecake than his famous New York Style Cheesecake. 10/10 would recommend to anyone when they're in the area! - Gill Bates</p>
