--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,55 +19,63 @@
                 <li><a href="#" class="links">Order</a>
             </ul>
         </div>
-    <div class="hero-container">
-        <div class="warm-buns-card">
-            <h1>Warm Buns Bakery!</h1>
-            <p class="welcome-text">Warm Buns Bakery was started in 2009 by world renowned baker, Seymour Martin. Please consider signing up up below to added to our mailing list.</p>
-            <button class="top-button">Sign up!</button>
-        </div>
+        <div class="hero-container">
+            <div class="warm-buns-card">
+                <h1>Michael Scott Baking Company!</h1>
+                <p class="welcome-text">Michael Scott Baking Company was started in 2009 by world renowned paper
+                    salesman, Michael Scott. Please click below to sign up for monthly coupons.</p>
+                <button class="top-button">Sign up!</button>
+            </div>
             <img class="bakery-image" src="./images/bakery.jpg" alt="Image a bakery">
-    </div>
+        </div>
     </div>
     <div class="desserts-wrapper">
-        <h2>Our Bestsellers</h2>
+        <p class="desserts-header">Our Bestsellers</p>
         <div class="desserts-container">
-        <div class="desserts">
-            <img class="dessert-image" src="./images/tiramisu.jpg" alt="Image of Tiramisu!">
-        </div>
-            <p class="dessert-text">Tiramisu is an elegant and rich layered Italian dessert made with delicate ladyfinger cookies, espresso or instant espresso, mascarpone cheese, eggs, sugar, Marsala wine, rum and cocoa powder.</p>
-        <div class="desserts">
-            <img class="dessert-image" src="./images/cheesecake.jpg" alt="Image of Cheesecake!">
-        </div>
-            <p class="dessert-text">New York cheesecake is known for its creamy, satiny texture. It's rich, dense and tall with a flat top – exactly how I like my cheesecake. It's made with cream cheese, eggs, egg yolks and heavy cream or sour cream, to add richness and a smooth consistency</p>
-        <div class="desserts">
-            <img class="dessert-image" src="./images/donuts.jpg" alt="Image of Donuts!">
-        </div>
-            <p class="dessert-text">Our delicious chocolate and vanilla cake donuts are baked in the oven, covered with chocolate and maple frosting, and decorated with melted Ghirardelli™ chocolates.</p>
-        <div class="desserts">
-            <img class="dessert-image" src="./images/macarons.jpg" alt="Image of Macarons!">
-        </div>
-            <p class="dessert-text">Our Macarons have a smooth, crisp shell and a moist, chewy interior. They are made with egg whites and lots of ground nuts, which helps them to attain that chewy texture without drying out and becoming too crispy, like a simple meringue cookie made with just egg whites and sugar.</p>
-        </div>
-   </div>         
-
-            <!--- 
-        <p>Warm Buns Bakery is by far the best bakery in town. Seymour Martin is a genius and I dont think I've tasted a better cheesecake than his famous New York Style Cheesecake. 10/10 would recommend to anyone when they're in the area! - Gill Bates</p>
-
-        <div class="sign-up-container">
-            <div class="container-header">Don't wait any longer!</div>
-                <div class="container-text">Sign up now for our weekly newsletter and monthly coupons!</div>
-                    <button class="bottom-sign-up">Sign up</button>
-        <div class="footer">
-            <div class="footer-text"> Copywrite © Warm Buns LLC </div>
-        </div>
+            <div class="desserts">
+                <img class="dessert-image" src="./images/tiramisu.jpg" alt="Image of Tiramisu!">
+                <p class="dessert-text">Tiramisu</p>
+            </div>
+            <div class="desserts">
+                <img class="dessert-image" src="./images/cheesecake.jpg" alt="Image of Cheesecake!">
+                <p class="dessert-text">New York Cheesecake</p>
+            </div>
+            <div class="desserts">
+                <img class="dessert-image" src="./images/donuts.jpg" alt="Image of Donuts!">
+                <p class="dessert-text">Cake Donuts</p>
+            </div>
+            <div class="desserts">
+                <img class="dessert-image" src="./images/macarons.jpg" alt="Image of Macarons!">
+                <p class="dessert-text">Coffee Macarons</p>
+            </div>
         </div>
     </div>
--->
+    <div class="quote-wrapper">
+        <div class="quote-container">
+            <p class="quote-text">You miss 100% of the shots you don’t take – Wayne Gretzky</p>
+            <p class="quote-author">- Michael Scott</p>
+        </div>
+
+    </div>
+    <div class="sign-up-wrapper">
+        <div class="sign-up-container">
+            <h3 class="container-header">Don't wait any longer </h3>
+            <p class="container-text">Sign up now for our weekly newsletter and monthly coupons!</p>
+            <button class="bottom-sign-up">Sign up</button>
+        </div>
+    </div>
+    <div class="footer-wrapper">
+        <div class="footer">
+            <div class="footer-text"> Copywrite © Michael Scott Baking Company LLC </div>
+        </div>
+    </div>
 
 
-    
-        
+
+
+
 </body>
+
 </html>
 
 
